<resources>
    <string name="app_name">Task Manager</string>
    <string name="add_task">Add Task</string>
    <string name="deadline">Deadline</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="task_title">Task title</string>
    <string name="tags">Tags</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="color_tag">Task color tag</string>
    <string name="tags_input_hint">Use a comma as a separator.</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_state">Task State</string>
    <string name="delete">Delete</string>
    <string name="set_done">Mark as done</string>
    <string name="set_undone">Mark as not completed</string>
    <string name="update">Update</string>
    <string name="task_done">Task Is Done</string>
    <string name="unfulfilled">Unfulfilled</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City Name</string>
    <string name="feels_like">Feels like</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="temperature">Temperature</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="weather">Weather</string>
    <string name="my_other_projects">My Other Projects</string>
    <string name="author_name">Bohdan Levchenko</string>
    <string name="grade">Self-taught programmer</string>
    <string name="open_menu">Open Menu</string>
    <string name="close_menu">Close Menu</string>
    <string name="tabs">Tabs</string>
    <string name="tasks">Tasks</string>
    <string name="tags_separator">Use a comma as a separator</string>
</resources>