<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.select.SelectFragment">

    <TextView
        android:id="@+id/select_title_label_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:theme="@style/TabHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="@font/lato_bold"
        android:gravity="center|start"
        android:hint="@string/task_title"
        android:minHeight="48dp"
        android:paddingEnd="45dp"
        android:textSize="18sp"
        android:theme="@style/TabHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_title_label_tv"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <ImageView
        android:id="@+id/select_colortag_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/color_tag"
        android:focusable="true"
        android:src="@drawable/ic_circle_fill"
        app:layout_constraintBottom_toBottomOf="@+id/select_title_tv"
        app:layout_constraintEnd_toEndOf="@+id/select_title_tv"
        app:layout_constraintTop_toTopOf="@+id/select_title_tv"
        app:tint="@color/teal_200"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/select_title_separator"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:paddingBottom="10dp"
        android:src="@drawable/dividing_line"
        android:theme="@style/TabSelectorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_title_tv"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/select_deadline_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/deadline"
        android:theme="@style/TabHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_title_separator" />

    <TextView
        android:id="@+id/select_date_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/lato_bold"
        android:gravity="center|start"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:paddingEnd="45dp"
        android:textSize="18sp"
        android:theme="@style/TabHidden"
        android:windowSoftInputMode="stateAlwaysHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_deadline_tv"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextContrastCheck" />

    <ImageView
        android:id="@+id/select_date_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/date"
        android:src="@drawable/ic_calendar"
        android:theme="@style/TabSelectorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/select_date_et"
        app:layout_constraintEnd_toEndOf="@+id/select_date_et"
        app:layout_constraintTop_toTopOf="@+id/select_date_et" />

    <TextView
        android:id="@+id/select_time_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="true"
        android:fontFamily="@font/lato_bold"
        android:gravity="center|start"
        android:hint="@string/time"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:paddingEnd="45dp"
        android:textSize="18sp"
        android:theme="@style/TabHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_date_et"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextContrastCheck" />

    <ImageView
        android:id="@+id/select_time_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/time"
        android:src="@drawable/ic_clock"
        android:theme="@style/TabSelectorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/select_time_et"
        app:layout_constraintEnd_toEndOf="@+id/select_time_et"
        app:layout_constraintTop_toTopOf="@+id/select_time_et" />

    <ImageView
        android:id="@+id/select_deadline_separator"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:paddingBottom="14dp"
        android:src="@drawable/dividing_line"
        android:theme="@style/TabSelectorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_time_et"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/select_tags_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/tags_input_hint"
        android:fontFamily="@font/lato_bold"
        android:gravity="center|start"
        android:hint="@string/tags"
        android:minHeight="48dp"
        android:paddingEnd="45dp"
        android:textSize="18sp"
        android:theme="@style/TabHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextContrastCheck" />

    <ImageView
        android:id="@+id/select_tags_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/tags"
        android:src="@drawable/ic_tags"
        android:theme="@style/TabSelectorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/select_tags_tv"
        app:layout_constraintEnd_toEndOf="@+id/select_tags_tv"
        app:layout_constraintTop_toTopOf="@+id/select_tags_tv" />

    <Button
        android:id="@+id/select_set_done_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/set_done"
        android:textAllCaps="false"
        android:theme="@style/ButtonMain"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        android:theme="@style/TabHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_deadline_separator" />

</androidx.constraintlayout.widget.ConstraintLayout>