<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.update.UpdateFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_title_ti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:hint="@string/task_title"
            android:minHeight="48dp"
            android:paddingEnd="40dp"
            tools:ignore="RtlSymmetry,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/update_colortag_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/color_tag"
        android:focusable="true"
        android:src="@drawable/ic_circle_fill"
        app:layout_constraintBottom_toBottomOf="@+id/update_title_ti"
        app:layout_constraintEnd_toEndOf="@+id/update_title_ti"
        app:layout_constraintTop_toTopOf="@+id/update_title_ti"
        app:tint="@color/teal_200"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_deadline_ti"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_title_ti">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_deadline_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:fontFamily="@font/lato"
            android:hint="@string/deadline"
            android:minHeight="48dp"
            android:windowSoftInputMode="stateAlwaysHidden"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/update_time_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/time"
        android:src="@drawable/ic_clock"
        android:theme="@style/TabSelectorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/update_deadline_ti"
        app:layout_constraintEnd_toEndOf="@+id/update_deadline_ti"
        app:layout_constraintTop_toTopOf="@+id/update_deadline_ti"
        app:layout_constraintVertical_bias="0.583" />

    <LinearLayout
        android:id="@+id/update_pickers_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_deadline_ti">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <DatePicker
                android:id="@+id/update_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="-30dp"
                android:layout_marginEnd="-30dp"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.widget.TimePicker
                android:id="@+id/update_time_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="-30dp"
                android:layout_marginEnd="-30dp"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:timePickerMode="spinner"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_tags_ti"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_pickers_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/update_tags_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:hint="@string/tags"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/update_tags_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/tags"
        android:src="@drawable/ic_tags"
        android:theme="@style/TabSelectorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/update_tags_ti"
        app:layout_constraintEnd_toEndOf="@+id/update_tags_ti"
        app:layout_constraintTop_toTopOf="@+id/update_tags_ti" />

    <Switch
        android:id="@+id/update_set_undone_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:fontFamily="@font/lato"
        android:minHeight="48dp"
        android:text="@string/set_done"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_tags_ti"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/update_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textAppearance="@style/ButtonMainText"
        android:theme="@style/ButtonMain"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>