<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/task_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/task_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rect_shape"
        android:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/task_edit_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_task"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_edit"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="30sp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/task_state"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/task_state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_circle_empty"
            app:tint="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/task_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/task_tags_recycler"
                android:layout_width="0dp"
                android:layout_height="42dp"
                app:layout_constraintEnd_toEndOf="@+id/task_content"
                app:layout_constraintStart_toStartOf="@+id/task_content"
                app:layout_constraintTop_toTopOf="@+id/task_content" />

            <TextView
                android:id="@+id/task_title_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:gravity="center_vertical|start"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/task_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@+id/task_content"
                app:layout_constraintStart_toStartOf="@+id/task_content"
                app:layout_constraintTop_toBottomOf="@+id/task_tags_recycler" />

            <ImageView
                android:id="@+id/date_icon_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_title_txt"
                app:srcCompat="@drawable/ic_calendar"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/lato"
                android:gravity="start|center_vertical"
                android:text="@string/date"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/date_icon_iv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/date_icon_iv"
                app:layout_constraintTop_toTopOf="@+id/date_icon_iv" />

            <ImageView
                android:id="@+id/time_icon_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_icon_iv"
                app:srcCompat="@drawable/ic_clock"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/lato"
                android:gravity="start|center_vertical"
                android:text="@string/time"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/time_icon_iv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time_icon_iv"
                app:layout_constraintTop_toTopOf="@+id/time_icon_iv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

